Fixed vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,8 @@ button{
     position: relative;
     display: block;
     align-items: center;
-    border-radius: 10px;  
-    height: 5em;
-    margin: 0 auto;
-    padding: 2em;
-    background-color: black;
-    color:white;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
   }
-  
+
   .divSquare{
       background-color: black;
       float: left;
@@ -23,9 +14,11 @@ button{
       text-align: center;
       font-size: 4em;
       border-radius: 4px;
+      line-height: 170px; 
+    vertical-align: middle;
   }
-  
-  
+
+
   body{
     background-color: darkgrey;
   }
